<resources>
    <string name="app_name">AmarBari</string>

    <string name="next">NEXT</string>
    <string name="skip">Skip</string>
    <string name="start">GOT IT</string>
    <string name="login">Log In</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="by_clicking_continue">By Clicking Continue,you agree with our Privacy Policy</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="cont">Continue</string>

    <string name="haveemailpassword"><![CDATA[Have a <b>\Email/Password</b> \Account?]]></string>
    <string name="singupb"><![CDATA[<b>Sign Up?</b>]]></string>
    <string name="did_not_receive_the_code">Did not receive the code?</string>
    <string name="submit">Submit</string>

    <string name="please_provide_us_details">Please provide us with a few more details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_">Welcome To amarBari</string>
    <string name="address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wallet">Wallet</string>
    <string name="notification">Alert</string>
    <string name="rent">Rent</string>
    <string name="collected">Collected</string>
    <string name="pending">Pending</string>
    <string name="property">Property</string>
    <string name="role">Role</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="name">Enter Your Full Name</string>
    <string name="todo">todo</string>
    <string-array name="month">
        <item name="Jan" />
        <item name="Feb" />
        <item name="Mar" />
        <item name="Apr" />
    </string-array>
</resources>