<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_bg"
    android:fillViewport="true"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UI.Account.ActivityAccount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="220dp"
                        android:background="@drawable/shape_top_head"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_marginTop="80dp"
                        android:src="@drawable/img"
                        app:layout_constraintBottom_toBottomOf="@+id/view"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>
            <!-- <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:gravity="center"
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/gilroybold"
                     android:padding="5dp"
                     android:text="I am"
                     android:textColor="@color/black"
                     android:textSize="21sp" />

                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="horizontal"
                     android:gravity="center">


                     <TextView
                         android:id="@+id/txt_owner"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:fontFamily="@font/g_bold"
                         android:padding="5dp"
                         android:text="Owner"
                         android:textColor="@color/black"
                         android:textSize="21sp" />
                     <TextView
                         android:id="@+id/txt_tenent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="5dp"
                         android:fontFamily="@font/gilroybold"
                         android:padding="5dp"
                         android:text="Tenant"
                         android:textColor="@color/black"
                         android:textSize="21sp" />
                 </LinearLayout>

             </LinearLayout>  -->

            <LinearLayout
                android:id="@+id/ll_all"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:animateLayoutChanges="true"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tag_login"
                    style="@style/spinnerstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:fontFamily="@font/gilroybold"
                    android:text="@string/login"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:visibility="visible">

                        <LinearLayout
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/box_royel"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="2dp">

                            <Spinner
                                android:id="@+id/spinner_ccode"
                                android:layout_width="fill_parent"
                                android:layout_height="51dp"
                                android:backgroundTint="@color/gold2"
                                android:fontFamily="@font/gilroyregular" />

                        </LinearLayout>

                        <View
                            android:layout_width="8dp"
                            android:layout_height="42dp" />

                        <EditText
                            android:id="@+id/login_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_et"
                            android:fontFamily="@font/gilroyregular"
                            android:hint="@string/enter_phone_number"
                            android:inputType="phone"
                            android:padding="16dp"
                            android:textColor="@color/black" />


                    </LinearLayout>

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/selector_et"
                        android:fontFamily="@font/gilroyregular"
                        android:hint="@string/enter_your_password"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        app:passwordToggleEnabled="true" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:visibility="visible">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="My self"
                                android:textSize="18sp"
                                android:fontFamily="@font/gilroybold"
                                android:textColor="@color/gold_royel2"/>

                        <CheckBox
                            android:id="@+id/check_owner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:fontFamily="@font/gilroyregular"
                            android:backgroundTint="@color/gold_royel2"
                            android:text="Owner"/>
                        <CheckBox
                            android:id="@+id/check_tenent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:fontFamily="@font/gilroyregular"
                            android:backgroundTint="@color/gold_royel2"
                            android:text="Tenent"/>

                    </LinearLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/txt_newUser"
                    style="@style/spinnerstyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/gilroybold"
                    android:text="New?Create account"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:id="@+id/ll_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <EditText
                        android:id="@+id/regi_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="@drawable/selector_et"
                        android:fontFamily="@font/gilroyregular"
                        android:hint="@string/name"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />
                    <EditText
                        android:id="@+id/regi_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:inputType="phone"
                        android:background="@drawable/selector_et"
                        android:fontFamily="@font/gilroyregular"
                        android:hint="@string/enter_phone_number"
                        android:textColor="@color/black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <EditText
                        android:id="@+id/regi_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="@drawable/selector_et"
                        android:fontFamily="@font/gilroyregular"
                        android:hint="@string/enter_your_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/txt_oldUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroybold"
                        android:padding="10dp"
                        android:text="Login to my account"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroyregular"
                        android:padding="5dp"
                        android:text="@string/by_clicking_continue"
                        android:textSize="11sp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/btn_proceed"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_button"
                        android:backgroundTint="@color/gold_royel2"
                        android:fontFamily="@font/gilroybold"
                        android:gravity="center"
                        android:text="Log In"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />

                    <TextView

                        android:id="@+id/txt_forgotclick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/gilroybold"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>
                <!--     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
                         android:padding="10dp">

                         <TextView

                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/gilroyregular"
                             android:padding="5dp"
                             android:text="@string/by_clicking_continue"
                             android:textSize="11sp"
                             android:visibility="visible" />

                         <TextView
                             android:id="@+id/btn_proceed"
                             android:layout_width="match_parent"
                             android:layout_height="48dp"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:background="@drawable/rounded_button"
                             android:fontFamily="@font/gilroybold"
                             android:gravity="center"
                             android:text="@string/cont"
                             android:textAllCaps="false"
                             android:textColor="@color/white"
                             android:textSize="18sp" />

                         <View
                             android:layout_width="match_parent"
                             android:layout_height="10dp" />

                         <TextView

                             android:id="@+id/txt_forgotclick"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:fontFamily="@font/gilroybold"
                             android:gravity="center"
                             android:padding="5dp"
                             android:text="@string/forgot_password"
                             android:textColor="@color/black"
                             android:textSize="14sp" />
                     </LinearLayout>-->

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>